Add swagger definitions for auth endpoints inputs and list endpoint outputs
